# dev

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  autogen  configure.ac
branches/newrc/: AUTHORS  ChangeLog  Makefile.am  configure.ac
branches/newrc/config/: dev_compat_prog_path.m4
branches/newrc/extensions/: Makefile.am  extension.am
branches/newrc/extensions/base/: Makefile.am  clone  edit  new  require.sh  status
branches/newrc/extensions/base/loaders/: mkdir  untar
branches/newrc/extensions/base/subcommands/: clone  delete  var
branches/newrc/extensions/cvs/: Makefile.am
branches/newrc/extensions/quilt/: Makefile.am  defaults.sh  require.sh
branches/newrc/framework/: Makefile.am  dev.in
compat/: Makefile.am  README.txt
config/: dev_compat_prog_path.m4  dev_config_var.m4  dev_define_dir.m4
core/: Makefile.am  defaults.sh  dev.in  dev_functions.sh
extensions/: Makefile.am  extension.am
extensions/autotools/: Makefile.am  configure  defaults.sh
extensions/base/: Makefile.am  clone  configure.m4  defaults.sh  edit  load  new  require.sh  status  unload
extensions/base/commands/: status
extensions/base/loaders/: mkdir  untar
extensions/base/subcommands/: delete  edit  load  new  project  status  task  tasks  tasktype  var
extensions/color/: Makefile.am  require.sh
extensions/cvs/: Makefile.am  configure.m4  cvs  require.sh  task_functions.sh
extensions/git/: configure.m4  git
extensions/hg/: hg
extensions/patch/: Makefile.am  configure.m4  defaults.sh  mkpatch  require.sh
extensions/quilt/: Makefile.am  configure.m4  defaults.sh  quilt  require.sh  task_functions.sh
extensions/svn/: Makefile.am  configure.m4  require.sh  svn
extensions/virtualenv/: configure.m4  defaults.sh  require.sh
extensions/virtualenv/loaders/: pydevelop  virtualenv
extensions/virtualenv/subcommands/: virtualenv
framework/: Makefile.am  defaults.sh  dev.in  dev_functions.sh  subcommand_functions.sh
lib/: subcommand_functions.sh
lib/dev/: defaults.sh.in  defaults.sh.src  paths.sh.in  task_functions.sh.in
test/: testutils.in
trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  autogen  configure.ac
trunk/.dev/: task
trunk/config/: dev_compat_prog_path.m4  dev_config_var.m4  dev_path_progs.m4  dev_setup_extension.m4
trunk/core/: Makefile.am
trunk/extensions/: extension.am
trunk/extensions/autotools/: Makefile.am  configure.m4  make
trunk/extensions/base/: Makefile.am  defaults.sh  delete  load  new  require.sh  status  task_functions.sh  tasks  var
trunk/extensions/base/commands/: clone  tasks  unload
trunk/extensions/base/loaders/: untar
trunk/extensions/base/subcommands/: clone  delete  edit  new  task  tasks  tasktype  unload  upgrade  var
trunk/extensions/color/: Makefile.in  configure.m4
trunk/extensions/cvs/: configure.m4  cvs
trunk/extensions/darcs/: Makefile.am  configure.m4  darcs
trunk/extensions/git/: Makefile.am  git
trunk/extensions/hg/: Makefile.am  configure.m4  hg
trunk/extensions/quilt/: configure.m4  defaults.sh  require.sh
trunk/extensions/svn/: Makefile.am  configure.m4  require.sh  svn  task_functions.sh
trunk/extensions/virtualenv/: Makefile.am  defaults.sh  require.sh
trunk/extensions/virtualenv/loaders/: pip  pydevelop
trunk/extensions/virtualenv/subcommands/: virtualenv
trunk/framework/: Makefile.am  config.sh.in  defaults.sh  dev.in  dev_functions.sh  require.sh
trunk/lib/: Makefile.am  config.sh.in
trunk/lib/dev/: dev_functions.sh  functions.sh
trunk/test/: Makefile.am  basic.sh
wiki/: AutotoolsExtension.wiki  BaseExtension.wiki  ColorExtension.wiki  CvsExtension.wiki  DarcsExtension.wiki  DevArchitecture.wiki  DevExtensions.wiki  DevFramework.wiki  DevOverview.wiki  ExtensionDetails.wiki  GitExtension.wiki  GuidedTour.wiki  HgExtension.wiki  Loader.wiki  LoaderIndex.wiki  NewLayout.wiki  PatchExtension.wiki  ProjectDirectory.wiki  QuiltExtension.wiki  Sources.wiki  SubcommandIndex.wiki  SvnExtension.wiki  TaskConfiguration.wiki  TaskDirectory.wiki  TaskType.wiki  ToDoList.wiki  VariableIndex.wiki  VirtualenvExtension.wiki
