include $(top_srcdir)/extensions/extension.am

EXTENSION=base

loader_SCRIPTS = \
	loaders/mkdir \
	loaders/untar

subcommands_SCRIPTS = \
	subcommands/clone \
	subcommands/delete \
	subcommands/edit \
	subcommands/load \
	subcommands/new \
	subcommands/tasks \
	subcommands/var

extlib_SCRIPTS = require.sh defaults.sh
